--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="WfKjfRu_FkiRpiZWb1e77Xcwcd_h8unpYgnYfvxw1PY" />
     <link rel="icon" type="image/svg+xml" href="./logo/ResumeLogo-w.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Osric Jacobs</title>
